--- a/package.json
+++ b/package.json
@@ -1,11 +1,51 @@
 {
   "name": "coupons-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext js,jsx,ts,tsx .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
+    "prepare": "husky install"
   },
-  "author": "lucas tabare",
-  "license": "ISC"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx,jsx}": [
+      "prettier --write"
+    ],
+    "*.{json,graphql,gql}": [
+      "prettier --write"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@types/node": "^12.12.21",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vtex/prettier-config": "^1.0.0",
+    "@vtex/tsconfig": "^0.6.0",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.43.0",
+    "eslint-config-vtex": "^15.0.0",
+    "eslint-config-vtex-react": "^9.0.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-vtex": "^2.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.8.8",
+    "sass": "^1.67.0",
+    "typescript": "^4.6.3",
+    "yargs": "^17.7.2"
+  },
+  "dependencies": {
+    "@types/xml2js": "^0.4.9"
+  },
+  "resolutions": {
+    "@testing-library/dom": "^9.0.0"
+  },
+  "packageManager": "yarn@4.3.1"
 }
