--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint --ext js,jsx,ts,tsx .",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
-    "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\""
   },
   "lint-staged": {
     "*.{ts,js,tsx,jsx}": [
@@ -34,7 +28,6 @@
     "eslint-config-vtex-react": "^9.0.0",
     "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-vtex": "^2.3.0",
-    "husky": "^7.0.4",
     "lint-staged": "^10.5.3",
     "prettier": "^2.8.8",
     "sass": "^1.67.0",
