--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "coupons-app",
-  "vendor": "tiendasdigitalesar",
+  "vendor": "pinataar",
   "version": "0.0.1",
   "title": "Coupons App",
   "description": "Coupons App for VTEX IO",
